--- a/relatorio-latex/capitulos/07_implementacao_correcoes_vulnerabilidades.tex
+++ b/relatorio-latex/capitulos/07_implementacao_correcoes_vulnerabilidades.tex
@@ -85,9 +85,11 @@ Abaixo descrevem-se as correções aplicadas para cada vulnerabilidade detetada.
 \subsection{Resultados Obtidos}
 
 No levantamento inicial, foram identificadas 5 vulnerabilidades principais que comprometiam a confidencialidade e integridade da aplicação. Estas falhas permitiam desde a leitura do código-fonte original até à execução de scripts maliciosos no navegador da vítima (conforme detalhado na Secção \ref{sec:vulnerabilidades-detetadas}).
-Após a aplicação das medidas de mitigação, realizou-se um segundo ciclo de testes. A tabela abaixo resume o estado atual das vulnerabilidades:
+Após a aplicação das medidas de mitigação, realizou-se um segundo ciclo de testes. A Tabela \ref{tab:resumo-correcoes} resume o estado atual das vulnerabilidades:
 
-\begin{table}[h!]
+\begin{table}[!ht]
+\caption{Resumos do estado das vulnerabilidades identificadas após as correções.}
+\label{tab:resumo-correcoes}
 \centering
 \begin{tabular}{|p{4cm}|p{2.8cm}|p{7.5cm}|}
 \hline
