--- a/relatorio-latex/capitulos/07_implementacao_correcoes_vulnerabilidades.tex
+++ b/relatorio-latex/capitulos/07_implementacao_correcoes_vulnerabilidades.tex
@@ -187,7 +187,7 @@ Após a aplicação das medidas de mitigação, realizou-se um segundo ciclo de 
 \textbf{Vulnerabilidade} & \textbf{Estado no 2.º Ciclo} & \textbf{Observação} \\ \hline
 
 Source Map Exposure & Mitigada  & 
-Ficheiros \texttt{.map} deixaram de ser carregados pelo navegador (Erro 404 confirmado). \\ \hline
+Ficheiros \texttt{.map} deixaram de ser carregados pelo navegador. \\ \hline
 
 Mixed Content & Não mitigada  &
 Não é possível corrigir no frontend: não existe qualquer recurso HTTP no código, portanto o mixed content vem do SDK Base44, que não pode ser modificado. \\ \hline
