--- a/relatorio-latex/capitulos/07_implementacao_correcoes_vulnerabilidades.tex
+++ b/relatorio-latex/capitulos/07_implementacao_correcoes_vulnerabilidades.tex
@@ -188,7 +188,7 @@ Após a aplicação das medidas de mitigação, realizou-se um segundo ciclo de 
         \midrule
         
         Source Map Exposure & Mitigada & 
-        Ficheiros \texttt{.map} deixaram de ser carregados pelo navegador (Erro 404 confirmado). \\ 
+        Ficheiros \texttt{.map} deixaram de ser carregados pelo navegador. \\ 
         \addlinespace
         
         Mixed Content & Não mitigada &
